<resources>
    <string name="app_name">Infinity Payments</string>
    <string name="main_name">Main Menu</string>
    <string name="item_name">Item Menu</string>

    <!-- Strings related to login -->
    <string name="go_to_item">Go to all items</string>
    <string name="logout">Logout?</string>
    <string name="top_up">Top Up Qr Code</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="show_password">Show Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
